Animate.css is in scss now, for correctly work uncss gulp plugin. Hover.css moved to separate folder. Default outlines disabled for all selectors in style.css. Deleted center div example from style.css. Media queries in separate scss files. Add backgroundMobile and backgroundHalf mixins in newstyle.scss. Add preset for hamburger menu button in newstyle480.scss Add meta viewport in index.html. Add package.json for faster installation of gulp plugins. Add in gulppfile.js configs for gulp-connect and gulp-livereload. Script.js moved to js folder. Wow.js disabled on mobile devices. Add description of project in readme.md

--- a/scss/newstyle.scss
+++ b/scss/newstyle.scss
@@ -1,5 +1,9 @@
-/* Main SCSS file*/
-@import "hover";
+/* Main SCSS file */
+@import "hover/hover";
+@import "animate";
+@import "newstyle870";
+@import "newstyle600";
+@import "newstyle480";
 
 $color: #000;
 $colorSubheader: #DDD;
@@ -10,10 +14,24 @@ $fontLt: 'Roboto Lt';
   display: flex;
   justify-content: $justify-content;
 }
-@mixin background($image,$position){
+@mixin backgroundMobile($backgroundColor:transparent){
+  background:{
+    image: none;
+    color: $backgroundColor;
+  }
+}
+@mixin backgroundHalf($image){
   background:{
     image: url($image);
     repeat: no-repeat;
-    position: $position;
+    position: 50%;
+    size: contain;
   }
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
 }
